--- a/src/Modules/MasterModule/Views/Clients/ActivitySector.xaml
+++ b/src/Modules/MasterModule/Views/Clients/ActivitySector.xaml
@@ -209,7 +209,8 @@
                                                   DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                               Grid.Row="6"    
                                               LabelText="Producto trans." 
-                                                  LabelTextWidth="100"
+                                                  LabelTextWidth="115"
+                                                Height="35"
                                                   Margin="0,5,0,0"
                                                   ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                   TextContentWidth="220"
