--- a/src/Modules/MasterModule/Views/Clients/DriverLicenseView.xaml
+++ b/src/Modules/MasterModule/Views/Clients/DriverLicenseView.xaml
@@ -29,6 +29,7 @@
                                     AssistProperties="Code,Name,Direction,Zip,City,Telefono,CellPhone,Email,CreditCardType,NumberCreditCard,AccountableAccount"
                                     IsReadOnlySecond="True"   
                                     LabelTextWidth="80"
+                                    Height="30"
                                     TextContentFirstWidth="80"
                                     TextContentSecondWidth="150"
                                     SourceView="{Binding ClientHelper.DriversDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
@@ -84,29 +85,29 @@
                                 <RowDefinition Height="Auto"></RowDefinition>
                                 <RowDefinition Height="Auto"></RowDefinition>
                                 <RowDefinition Height="Auto"></RowDefinition>
+
                             </Grid.RowDefinitions>
-                            <KarveControls:DataDatePicker Grid.Column="0" Grid.Row="0" LabelText="Fecha Expediente NIF" 
-                                                              Height="50" MinWidth="100"
-                                                          LabelTextWidth="150"
+                            <KarveControls:DataDatePicker Grid.Column="0" Grid.Row="0" LabelText="Fecha Exp. NIF" 
+                                                              Height="35" MinWidth="100"
+                                                          LabelTextWidth="100"
                                                               KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                                                              KarveControls:ControlExt.DataSourcePath="FEDNI" Margin="0,0.071" Width="279.291" />
+                                                              KarveControls:ControlExt.DataSourcePath="FEDNI" Margin="10,8,4,8" Width="Auto" />
                             <KarveControls:DataField Grid.Column="1" Grid.Row="0"  DataSourcePath="LUDNI" 
                                                   DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                                   LabelText="En"
                                                   LabelTextWidth="30"
-                                                  Margin="22,8,-6,12"
+                                                  Margin="21,8,-5,13"
                                                   Height="30"                                                    
                                                   ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                   TextContentWidth="250"
-                                                  IsReadOnly="False" Width="452.942">
-                            </KarveControls:DataField>
+                                                  IsReadOnly="False"/>
 
-                            <KarveControls:DataDatePicker Grid.Column="0" 
+                            <KarveControls:DataDatePicker Grid.Column="0" Grid.Row="1"
                                                           LabelText="{Binding BirthDate, Source={StaticResource ResourceLanguage}}"
                                                   LabelTextWidth="150"
-                                                              Height="50" 
+                                                              Height="35" 
                                                               KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                                                              KarveControls:ControlExt.DataSourcePath="FENAC" Margin="15,47,1,3" Width="Auto" Grid.RowSpan="2" />
+                                                              KarveControls:ControlExt.DataSourcePath="FENAC" Margin="10,47,1,3" Width="Auto" Grid.RowSpan="2" />
 
                             <KarveControls:DataField Grid.Column="1" Grid.Row="1"  
                                                      DataSourcePath="LUNACI" 
@@ -120,12 +121,12 @@
                                                   TextContentWidth="250"
                                                   IsReadOnly="False" Width="465.758">
                             </KarveControls:DataField>
-                            <KarveControls:DataDatePicker Grid.Column="0" Grid.Row="2" LabelText="Fecha Expiracion Permiso" 
-                                                              Height="50" MinWidth="250"
+                            <KarveControls:DataDatePicker Grid.Column="0" Grid.Row="1" LabelText="Fecha Exp. Permiso" 
+                                                              Height="35" MinWidth="250"
                                                             LabelTextWidth="150"
                                                     
                                                           KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                                                              KarveControls:ControlExt.DataSourcePath="FEEXPE" Margin="15,2,18,6" Width="Auto" />
+                                                              KarveControls:ControlExt.DataSourcePath="FEEXPE" Margin="10,5,0,9" Width="Auto" />
                             <KarveControls:DataField Grid.Column="1" Grid.Row="2"  
                                                      DataSourcePath="LUEXPE" 
                                                   DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
@@ -139,11 +140,11 @@
 
                             <KarveControls:DataDatePicker 
                                  Grid.Column="0" Grid.Row="3"
-                                DockPanel.Dock ="Left" LabelText="Fecha Caducidad Permiso"
+                                DockPanel.Dock ="Left" LabelText="Fecha Cad. Permiso"
                                 LabelTextWidth="150"
-                                                              Height="50" MinWidth="250"
+                                                              Height="35" MinWidth="250"
                                                               KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                                                              KarveControls:ControlExt.DataSourcePath="FECAU" Margin="15,3,4,5" Width="Auto" />
+                                                              KarveControls:ControlExt.DataSourcePath="FECAU" Margin="10,11,14,13" Width="Auto" />
                             <KarveControls:DataField  Grid.Column="1" Grid.Row="3"  
                                                      DataSourcePath="NRC" 
                                                   DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
@@ -152,8 +153,7 @@
                                                   Height="30"
                                                   ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                   TextContentWidth="250"
-                                                  IsReadOnly="False" Width="448.289" Margin="22,14,-2,14">
-                            </KarveControls:DataField>
+                                                  IsReadOnly="False" Margin="21,14,-1,14"/>
 
                         </Grid>
                     </Grid>
