--- a/src/Modules/CarModel/CarModel/View/CarModelView.xaml
+++ b/src/Modules/CarModel/CarModel/View/CarModelView.xaml
@@ -684,25 +684,25 @@
                                         <ColumnDefinition></ColumnDefinition>
                                         <ColumnDefinition></ColumnDefinition>
                                     </Grid.ColumnDefinitions>
-                                    <Button Grid.Column="0">
+                                    <Button Grid.Column="0" Command="{Binding VehicleUpdate}">
                                         <StackPanel Orientation="Horizontal">
                                             <Image Source="/CarModel;component/Images/cars.png" Height="25"/>
                                             <TextBlock Text="Act.Vehiculo"></TextBlock>
                                         </StackPanel>
                                         </Button>
-                                    <Button  Grid.Column="1">
+                                    <Button  Grid.Column="1" Command="{Binding MantenianceUpdate}">
                                             <StackPanel Orientation="Horizontal">
                                             <Image Source="/CarModel;component/Images/tools.png" Height="25"/>
                                             <TextBlock Text="Calcular Mantenimiento"></TextBlock>
                                             </StackPanel>
                                         </Button>
-                                    <Button Grid.Column="2">
+                                    <Button Grid.Column="2" Command="{Binding TechnicalPage}" CommandParameter="TecnicalPage">
                                             <StackPanel Orientation="Horizontal">
                                             <Image Source="/CarModel;component/Images/techspec.png" Height="25"/>
                                             <TextBlock Text="Ficha Tecnica"></TextBlock>
                                             </StackPanel>
                                         </Button>
-                                    <Button Grid.Column="3">
+                                    <Button Grid.Column="3" Command="{Binding NewPage}">
                                         <StackPanel Orientation="Horizontal">
                                             <Image Source="/CarModel;component/Images/techspec.png" Height="25"/>
                                             <TextBlock Text="Nueva Ficha"></TextBlock>
